# 5_Pandav

./: README.md
backend/: .env  .env.example  README.md  abi.json  ai_explainer.py  blockchain.py  config.py  deploy.py  main.py  mock_agent.py  pip_out.txt  pip_out2.txt  populate_dashboard.py  pyproject.toml  requirements.txt  test_explainer.py
contracts/: AgentAuditLogger.sol  AgentDAO.sol  deploy.js  package-lock.json  package.json
contracts/artifacts/: AgentAuditLogger.json  AgentAuditLogger_metadata.json  AgentDAO.json  AgentDAO_metadata.json
frontend/: .gitignore  index.html  package-lock.json  package.json  test.txt
frontend/dashboard/dashboard_ui_template/app/: globals.css  layout.tsx
frontend/dashboard/dashboard_ui_template/components/: all-caught-up.tsx  dashboard-shell.tsx  intent-card.tsx  mobile-nav.tsx  page-header.tsx  risk-badge.tsx  sidebar.tsx  stat-card.tsx  top-nav.tsx  wallet-button.tsx  wallet-provider.tsx
frontend/dashboard/dashboard_ui_template/lib/: mock-data.ts
frontend/src/: App.jsx  index.css
frontend/src/components/: AllCaughtUp.css  AllCaughtUp.jsx  IntentCard.css  IntentCard.jsx  PageHeader.css  PageHeader.jsx  ProtectedRoute.jsx  RiskBadge.css  RiskBadge.jsx  StatCard.css  StatCard.jsx  Toast.css  Toast.jsx
frontend/src/context/: Web3Context.jsx  Web3Modal.js
frontend/src/layouts/: DashboardLayout.css  DashboardLayout.jsx
frontend/src/pages/Auth/: AuthPage.css  AuthPage.jsx
frontend/src/pages/Dashboard/: AgentSandbox.jsx  AuditHistory.css  AuditHistory.jsx  Dashboard.css  Dashboard.jsx  DashboardPages.css  (+3 more)
(+30 files in other folders)
