[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "google-generativeai>=0.7.2",
    "langchain>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "lru-dict>=1.3.0",
    "pydantic>=2.7.4",
    "uvicorn>=0.44.0",
]
